changed how table works for instructor breakdown & fixed alignment for pt text on trace eval & allowed long names on recent professor

--- a/frontend/src/pages/Professor.css
+++ b/frontend/src/pages/Professor.css
@@ -1140,7 +1140,9 @@
   }
   .prof-radar-metric-info:last-child:nth-child(odd) {
     grid-column: 1 / -1;
-    max-width: 50%;
+    width: fit-content;
     margin: 0 auto;
+    text-align: center;
+    align-items: center;
   }
 }
